assets/css/awemenu/awemenu.css
.awemenu-nav:before, .awemenu-nav:after {
  display: table;
  content: '';
  clear: both;
}

.awe-fr {
  float: right;
}

.awemenu-mobile .awemenu {
  overflow-x: hidden;
  overflow-y: auto;
}
.awemenu-mobile.awemenu-mobile-standard .awemenu, .awemenu-mobile.awemenu-mobile-top .awemenu {
  overflow: visible;
}

.awemenu-sticky {
  z-index: 999;
}

.awemenu-nav {
  position: relative;
  z-index: 999999;
}
.awemenu-nav * {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}
.awemenu-nav:after, .awemenu-nav:before {
  content: '';
  display: block;
  clear: both;
}

.awemenu-dropshadow .awemenu-submenu {
  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
}

.awemenu-active .awemenu {
  display: block;
}

.awemenu-container {
  margin-left: auto;
  margin-right: auto;
  position: relative;
  padding-left: 15px;
  padding-right: 15px;
  height: 60px;
}
.awemenu-container:after, .awemenu-container:before {
  content: '';
  clear: both;
  display: block;
}

.awemenu {
  position: relative;
  list-style: none;
  padding: 0;
  margin: 0;
}
.awemenu:after, .awemenu:before {
  content: '';
  clear: both;
  display: block;
}
.awemenu .awemenu-item > a {
  display: block;
}
.awemenu .awemenu-item > a i {
  vertical-align: middle;
}

.awemenu-submenu {
  list-style: none;
  padding: 0;
  margin: 0;
  display: none;
}

.awemenu-active > .awemenu-submenu {
  z-index: 999;
  display: block;
}

.awemenu-icon .icon-top, .awemenu-icon .icon-bottom {
  display: block;
}

.awemenu-has-logo .awemenu-logo {
  float: left;
}
.awemenu-has-logo .awemenu {
  float: right;
  position: static;
}

.awemenu-standard .awemenu-arrow, .awemenu-top .awemenu-arrow {
  display: inline-block;
  text-align: center;
  margin-left: 10px;
}
.awemenu-standard .awemenu > .awemenu-item, .awemenu-top .awemenu > .awemenu-item {
  float: left;
}
.awemenu-standard .awemenu > .awemenu-item.awemenu-item-right, .awemenu-top .awemenu > .awemenu-item.awemenu-item-right {
  float: right;
}
.awemenu-standard .awemenu > .awemenu-item > a .awemenu-arrow, .awemenu-top .awemenu > .awemenu-item > a .awemenu-arrow {
  margin-left: 5px;
}
.awemenu-standard .awemenu > .awemenu-item .awemenu-submenu, .awemenu-top .awemenu > .awemenu-item .awemenu-submenu {
  position: absolute;
}
.awemenu-standard .awemenu > .awemenu-item .awemenu-submenu .awemenu-item, .awemenu-top .awemenu > .awemenu-item .awemenu-submenu .awemenu-item {
  position: relative;
}
.awemenu-standard .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown, .awemenu-top .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown {
  width: 250px;
}
.awemenu-standard .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown .awemenu-item .awemenu-submenu, .awemenu-top .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown .awemenu-item .awemenu-submenu {
  width: 100%;
  left: 100%;
  top: 0;
}
.awemenu-standard .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown .awemenu-item > a .awemenu-arrow, .awemenu-top .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown .awemenu-item > a .awemenu-arrow {
  float: right;
}
.awemenu-standard .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown .awemenu-item.awemenu-invert > a .awemenu-arrow, .awemenu-top .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown .awemenu-item.awemenu-invert > a .awemenu-arrow {
  float: left;
  margin-right: 10px;
  margin-left: 0;
}
.awemenu-standard .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown .awemenu-item.awemenu-invert > .awemenu-submenu, .awemenu-top .awemenu > .awemenu-item .awemenu-submenu.awemenu-dropdown .awemenu-item.awemenu-invert > .awemenu-submenu {
  left: auto;
  right: 100%;
}
.awemenu-standard .awemenu > .awemenu-item .awemenu-submenu.awemenu-megamenu, .awemenu-top .awemenu > .awemenu-item .awemenu-submenu.awemenu-megamenu {
  width: 500px;
}

.awemenu-sticky {
  left: 0;
  right: 0;
  top: 0;
  position: fixed;
}

.awemenu-top {
  left: 0;
  right: 0;
  top: 0;
  z-index: 999;
  position: fixed;
}

.awemenu-left, .awemenu-outleft {
  float: left;
}
.awemenu-left.awemenu-nav.awemenu-has-logo .awemenu, .awemenu-nav.awemenu-has-logo.awemenu-outleft .awemenu {
  float: left;
}
.awemenu-left .awemenu-arrow, .awemenu-outleft .awemenu-arrow {
  float: right;
}
.awemenu-left .awemenu, .awemenu-outleft .awemenu {
  width: 250px;
  clear: both;
}
.awemenu-left .awemenu .awemenu-item, .awemenu-outleft .awemenu .awemenu-item {
  display: block;
  position: relative;
}
.awemenu-left .awemenu .awemenu-item .awemenu-submenu, .awemenu-outleft .awemenu .awemenu-item .awemenu-submenu {
  left: 100%;
  top: 0;
  width: 100%;
  position: absolute;
}
.awemenu-left .awemenu .awemenu-item .awemenu-submenu.awemenu-dropdown, .awemenu-outleft .awemenu .awemenu-item .awemenu-submenu.awemenu-dropdown {
  width: 250px;
}
.awemenu-left .awemenu .awemenu-item .awemenu-submenu.awemenu-megamenu, .awemenu-outleft .awemenu .awemenu-item .awemenu-submenu.awemenu-megamenu {
  width: 500px;
}
.awemenu-left .awemenu .awemenu-invert > a .awemenu-arrow, .awemenu-outleft .awemenu .awemenu-invert > a .awemenu-arrow {
  float: left;
  margin-right: 10px;
  margin-left: 0;
}
.awemenu-left .awemenu .awemenu-invert > .awemenu-submenu, .awemenu-outleft .awemenu .awemenu-invert > .awemenu-submenu {
  left: auto;
  right: 100%;
}

.awemenu-left, .awemenu-outleft,
.awemenu-right,
.awemenu-outright {
  display: inline-block;
}

.awemenu-right, .awemenu-outright {
  float: right;
}
.awemenu-right .awemenu-arrow, .awemenu-outright .awemenu-arrow {
  float: left;
  margin-right: 10px;
}
.awemenu-right .awemenu, .awemenu-outright .awemenu {
  width: 250px;
  clear: both;
}
.awemenu-right .awemenu .awemenu-item, .awemenu-outright .awemenu .awemenu-item {
  display: block;
  position: relative;
}
/* ... */

